[package]
name = "xiv-gen-db"
description = "Generates a database from xiv-gen's csv tables & provides a static entry point that compresses/decompresses the database"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# whether or not to embed game data
embed = []

[dependencies]
flate2 = "1.1.9"
rkyv = { version = "0.7.42", features = ["validation", "size_64", "std", "hashbrown"], default-features = false }
xiv-gen.workspace = true
anyhow.workspace = true

[build-dependencies]
xiv-gen = {workspace = true, features = ["csv_to_rkyv"]}
serde = { workspace = true }
rkyv = { version = "0.7.42", features = ["validation", "size_64", "std", "hashbrown"], default-features = false }
flate2 = "1.1.9"
