[package]
name = "xiv-gen"
version = "0.1.0"
edition = "2021"
description = "Generates structs capabale of deserializing the CSV files and packing bin code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
csv_to_bincode = ["csv"]

[dependencies]
serde = {version = "1.0.143", features = ["derive"]}
bincode = {version = "2.0.0-rc.1"}
csv = {version = "1.1.6", optional = true}

[build-dependencies]
codegen = "0.1.3"
clap = {version = "3.2.16", features = ["derive"]}
csv = "1.1.6"
reqwest = {version = "0.11.11", features = ["blocking"]}
heck = "0.4.0"
regex = "1.6.0"
lazy_static = "1.4.0"