[package]
name = "ultros-app"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["nightly"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
leptos-use = { workspace = true }
xiv-gen-db = { path = "../../xiv-gen-db" }
xiv-gen.workspace = true
uuid = { version = "1.19.0", features = ["v4", "js"] }

gloo-net = { workspace = true, optional = true }
gloo = { version = "0.11.0", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "AbortController",
    "Clipboard",
    "Window",
    "Location",
    "Navigator",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlDocument",
] }
ultros-api-types = { path = "../../ultros-api-types" }
ultros-db = { path = "../../ultros-db", optional = true }
serde = { version = "1", features = ["rc", "derive"] }
thousands = "0.2.0"
timeago = "0.4.0"
chrono.workspace = true
itertools.workspace = true
futures = "0.3"
humantime = "2.1"
colorsys = "0.6.6"
thiserror = "2.0.17"
log = "0.4.29"
anyhow = "1.0.100"
cookie = { version = "0.18", features = ["percent-encode"] }
wasm-bindgen = { version = "0.2", optional = true }
time = "0.3.20"
js-sys = { version = "0.3.61", optional = true }
tracing = "0.1"
serde_json = "1.0.145"
ultros-charts = { path = "../ultros-charts" }
plotters-canvas = "0.3"
icondata.workspace = true
serde_qs = "0.12.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
cfg-if.workspace = true
paginate = "1.1.11"
git-const.workspace = true
percent-encoding = "2.3.0"
async-trait = "0.1.77"
linregress = "0.5.3"
field-iterator = { path = "../../libs/field-iterator" }
# leptos_animation = "0.5.0"
leptos_hotkeys = { git = "https://github.com/slowtec/leptos-hotkeys.git", branch = "leptos-0.8" }
codee = {version = "0.3", features = ["json_serde"]}
send_wrapper = "0.6"
flume = { version = "0.11.1", features = ["async"] }
icondata_core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
    "deflate",
    "zstd"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = [
    "ssr",
] # this is mostly so if I run cargo check, it has a flavor to work on
hydrate = [
    "leptos/hydrate",
    "gloo",
    "gloo-net",
    "web-sys",
    "wasm-bindgen",
    "time/wasm-bindgen",
    "js-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum",
    "web-sys",
    "ultros-db",
    "xiv-gen-db/embed",
    "leptos-use/ssr",
    "axum",
    "leptos_hotkeys/ssr",
]
