[package]
name = "ultros-app"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["nightly"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
leptos-use = { workspace = true }
xiv-gen-db = { path = "../../xiv-gen-db" }
xiv-gen.workspace = true
uuid = { version = "1.23.1", features = ["v4", "js"] }

gloo-net = { workspace = true, optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "AbortController",
    "Clipboard",
    "Window",
    "Location",
    "Navigator",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlDocument",
    "Document",
    "Element",
    "PointerEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Event",
    # Web Push subscribe flow — see push_subscribe::enable_browser_notifications.
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "PushEncryptionKeyName",
    "Notification",
    "NotificationPermission",
] }
ultros-api-types = { path = "../../ultros-api-types" }
ultros-db = { path = "../../ultros-db", optional = true }
serde = { workspace = true, features = ["rc"] }
thousands = "0.2.0"
timeago = "0.6.0"
chrono.workspace = true
itertools.workspace = true
futures = "0.3.32"
humantime = "2.3"
colorsys = "0.7.3"
thiserror = { workspace = true }
log = "0.4.29"
anyhow = { workspace = true }
cookie = { version = "0.18.1", features = ["percent-encode"] }
wasm-bindgen = { version = "0.2", optional = true }
time = "0.3.47"
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
tracing = "0.1"
serde_json = { workspace = true }
ultros-charts = { path = "../ultros-charts" }
leptos-chartistry = "0.2.3"
icondata.workspace = true
gloo-timers = { version = "0.4.0", features = ["futures"] }
cfg-if.workspace = true
paginate = "1.1.11"
percent-encoding = "2.3.2"
linregress = "0.5.4"
field-iterator = { path = "../../field-iterator" }
# leptos_animation = "0.5.0"
leptos_hotkeys = { git = "https://github.com/slowtec/leptos-hotkeys.git", branch = "leptos-0.8" }
codee = {version = "0.3.5", features = ["json_serde"]}
send_wrapper = "0.6"
flume = { version = "0.12.0", features = ["async"] }
icondata_core.workspace = true
leptos_i18n.workspace = true

[build-dependencies]
leptos_i18n_build.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "brotli",
    "gzip",
    "deflate",
    "zstd"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = [
    "ssr",
] # this is mostly so if I run cargo check, it has a flavor to work on
hydrate = [
    "leptos/hydrate",
    "gloo-net",
    "web-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "time/wasm-bindgen",
    "js-sys",
    "leptos_i18n/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum",
    "web-sys",
    "ultros-db",
    "xiv-gen-db/embed",
    "leptos-use/ssr",
    "axum",
    "leptos_hotkeys/ssr",
    "leptos_i18n/axum",
]
