[package]
name = "ultros-charts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
xiv-gen-db = {path = "../../xiv-gen-db"}
xiv-gen.workspace = true
ultros-api-types = {path = "../../ultros-api-types"}
chrono = {workspace = true}
itertools.workspace = true
anyhow.workspace = true