[package]
name = "ultros-charts"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
image = ["dep:ultros-xiv-icons", "dep:image"]

[dependencies]
plotters = "0.3"
xiv-gen-db = {path = "../../xiv-gen-db"}
xiv-gen.workspace = true
ultros-api-types = {path = "../../ultros-api-types"}
ultros-xiv-icons = {path = "../ultros-xiv-icons", optional=true}
chrono = {workspace = true}
itertools.workspace = true
anyhow.workspace = true
image = {workspace = true, optional = true}
log = "0.4"
