[package]
name = "ultros-charts"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
image = ["dep:ultros-xiv-icons", "dep:image", "dep:base64"]

[dependencies]
ultros-api-types = { path = "../../ultros-api-types" }
chrono = { workspace = true }
itertools.workspace = true
ultros-xiv-icons = { path = "../ultros-xiv-icons", optional = true }
image = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
resvg = "0.47.0"
image = { workspace = true }
