[package]
name = "ultros-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultros-app = { path = "../ultros-app", default-features = false, features = ["hydrate"] }
ultros-api-types = { path = "../../ultros-api-types"}
leptos = { git = "https://github.com/leptos-rs/leptos.git", default-features = false, features = [
  "serde",
  "hydrate",
] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "1.0.0"
console_error_panic_hook = "0.1"
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", default-features = false }
gloo-net = "0.4.0"

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "ultros-app/hydrate"]