[package]
name = "ultros-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultros-app = { path = "../ultros-app", default-features = false, features = [
    "hydrate",
] }
ultros-api-types = { path = "../../ultros-api-types" }
leptos = { workspace = true, default-features = false, features = ["hydrate", "nightly"] }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
leptos_meta = { workspace = true, default-features = false }
gloo-net.workspace = true
xiv-gen-db = { path = "../../xiv-gen-db" }
xiv-gen = { path = "../../xiv-gen" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_bytes = "0.11"
serde_json = "1"
anyhow.workspace = true
rexie = "0.5"
any_spawner = "0.3"
tracing-wasm = "0.2.1"
console_log = { version = "1.0.0", features = ["color"] }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "ultros-app/hydrate"]
