[package]
name = "ultros-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultros-app = { path = "../ultros-app", default-features = false, features = [
    "hydrate",
] }
ultros-api-types = { path = "../../ultros-api-types" }
leptos = { workspace = true, default-features = false, features = ["hydrate", "nightly"] }
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-net.workspace = true
xiv-gen-db = { path = "../../xiv-gen-db" }
xiv-gen = { path = "../../xiv-gen" }
futures = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
anyhow.workspace = true
rexie = "0.5"
any_spawner = "0.3"
console_log = { version = "1.0.0", features = ["color"] }
web-sys = { version = "0.3", features = ["HtmlDocument", "Document", "Window", "Event", "EventTarget"] }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "ultros-app/hydrate"]
