[package]
name = "ultros-ui-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
leptos = {git = "https://github.com/gbj/leptos", default-features = false}
leptos_axum = {git = "https://github.com/gbj/leptos"}
ultros-app = {path = "../ultros-app"}
tower-http = { version = "0.3.4", features = ["fs"] }
ultros-db = {path = "../../ultros-db"}

[features]
default = ["ssr"]
ssr = ["ultros-app/ssr", "leptos/ssr"]