[package]
name = "ultros-ui-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
leptos = {git = "https://github.com/leptos-rs/leptos", default-features = false, features = ["ssr"]}
leptos_axum = {git = "https://github.com/leptos-rs/leptos"}
ultros-app = {path = "../ultros-app", features = ["ssr"]}
tower-http = { version = "0.3.4", features = ["fs"] }
ultros-db = {path = "../../ultros-db"}
log = "0.4.17"