[package]
name = "ultros-xiv-icons"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultros-api-types = {path = "../../ultros-api-types"}
tar = "0.4.45"
# zstd: better compression than gzip for the icon tarball; this crate is only
# pulled into the server (via `ultros-charts/image` feature → `ultros` → here),
# never into the WASM client, so the zstd-sys C dep is safe.
zstd = "0.13"
once_cell = "1.21"

[build-dependencies]
ultros-api-types = {path = "../../ultros-api-types"}
image = {workspace = true, features = ["webp", "png"]}
tokio = {version = "^1", features = ["rt-multi-thread", "macros", "fs"]}
indicatif = {version = "*"}
futures = "0.3.26"
tempfile = "3"
tar = "0.4.45"
zstd = "0.13"
